Fix home projects alignment

--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -136,12 +136,11 @@ body.home{
 .proj-right{
 	text-align:center;
 }
-
-@media screen and (min-width: 600px){
+@media screen and (min-width: 544px){
 	.proj-left{
 		text-align:right;
 	}
-	.proj-left{
+	.proj-right{
 		text-align:left;
 	}
 }
