--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -1041,11 +1041,11 @@ body.home {
   text-align: center;
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 544px) {
   .proj-left {
     text-align: right;
   }
-  .proj-left {
+  .proj-right {
     text-align: left;
   }
 }
